VariationHandling/JES_files/2016_preVFP/Histo_1000_TTToSemiLeptonic_boostedShiftedSrc26Up.err
[8MB/2.258GB][  0%][>                                                 ][4MB/s]  [24MB/2.258GB][  1%][>                                                 ][8MB/s]  [72MB/2.258GB][  3%][=>                                                ][18MB/s]  [112MB/2.258GB][  4%][==>                                               ][22.4MB/s]  [152MB/2.258GB][  6%][===>                                              ][25.33MB/s]  [200MB/2.258GB][  8%][====>                                             ][28.57MB/s]  [240MB/2.258GB][ 10%][=====>                                            ][30MB/s]  [288MB/2.258GB][ 12%][======>                                           ][32MB/s]  [336MB/2.258GB][ 14%][=======>                                          ][33.6MB/s]  [376MB/2.258GB][ 16%][========>                                         ][34.18MB/s]  [424MB/2.258GB][ 18%][=========>                                        ][35.33MB/s]  [472MB/2.258GB][ 20%][==========>                                       ][36.31MB/s]  [520MB/2.258GB][ 22%][===========>                                      ][37.14MB/s]  [560MB/2.258GB][ 24%][============>                                     ][37.33MB/s]  [600MB/2.258GB][ 25%][============>                                     ][37.5MB/s]  [648MB/2.258GB][ 28%][==============>                                   ][38.12MB/s]  [696MB/2.258GB][ 30%][===============>                                  ][38.67MB/s]  [736MB/2.258GB][ 31%][===============>                                  ][38.74MB/s]  [784MB/2.258GB][ 33%][================>                                 ][39.2MB/s]  [832MB/2.258GB][ 35%][=================>                                ][39.62MB/s]  [880MB/2.258GB][ 38%][===================>                              ][40MB/s]  [936MB/2.258GB][ 40%][====================>                             ][40.7MB/s]  [984MB/2.258GB][ 42%][=====================>                            ][41MB/s]  [1.008GB/2.258GB][ 44%][======================>                           ][41.28MB/s]  [1.055GB/2.258GB][ 46%][=======================>                          ][41.54MB/s]  [1.102GB/2.258GB][ 48%][========================>                         ][41.78MB/s]  [1.156GB/2.258GB][ 51%][=========================>                        ][42.29MB/s]  [1.203GB/2.258GB][ 53%][==========================>                       ][42.48MB/s]  [1.25GB/2.258GB][ 55%][===========================>                      ][42.67MB/s]  [1.297GB/2.258GB][ 57%][============================>                     ][42.84MB/s]  [1.352GB/2.258GB][ 59%][=============================>                    ][43.25MB/s]  [1.398GB/2.258GB][ 61%][==============================>                   ][43.39MB/s]  [1.445GB/2.258GB][ 63%][===============================>                  ][43.53MB/s]  [1.5GB/2.258GB][ 66%][=================================>                ][43.89MB/s]  [1.555GB/2.258GB][ 68%][==================================>               ][44.22MB/s]  [1.609GB/2.258GB][ 71%][===================================>              ][44.54MB/s]  [1.664GB/2.258GB][ 73%][====================================>             ][44.84MB/s]  [1.719GB/2.258GB][ 76%][======================================>           ][45.13MB/s]  [1.766GB/2.258GB][ 78%][=======================================>          ][45.2MB/s]  [1.82GB/2.258GB][ 80%][========================================>         ][45.46MB/s]  [1.875GB/2.258GB][ 83%][=========================================>        ][45.71MB/s]  [1.922GB/2.258GB][ 85%][==========================================>       ][45.77MB/s]  [1.977GB/2.258GB][ 87%][===========================================>      ][46MB/s]  [2.031GB/2.258GB][ 89%][============================================>     ][46.22MB/s]  [2.086GB/2.258GB][ 92%][==============================================>   ][46.43MB/s]  [2.133GB/2.258GB][ 94%][===============================================>  ][46.47MB/s]  [2.18GB/2.258GB][ 96%][================================================> ][46.5MB/s]  [2.242GB/2.258GB][ 99%][=================================================>][46.86MB/s]  [2.258GB/2.258GB][100%][==================================================][47.19MB/s]  [2.258GB/2.258GB][100%][==================================================][47.19MB/s]  
In file included from input_line_8:1:
/pool/condor/dir_16318/FillHistograms_Extended_JES.C:244:70: warning: 'if' initialization statements are a C++17 extension [-Wc++17-extensions]
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                     ^
/pool/condor/dir_16318/FillHistograms_Extended_JES.C:244:71: error: expected expression
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                      ^
